--- a/plots.ipynb
+++ b/plots.ipynb
@@ -305,7 +305,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('./with_cluster_full.csv')\n",
+    "df = pd.read_csv('https://raw.githubusercontent.com/saujanya01/kprototype_clustering/master/with_cluster_full.csv')\n",
     "df.head(10)"
    ]
   },
