--- a/customer_clustering.ipynb
+++ b/customer_clustering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -34,12 +34,12 @@
    },
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"https://raw.githubusercontent.com/saujanya01/kprototype_clustering/master/customer_data.csv\")"
+    "df = pd.read_csv(\"./customer_data.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -212,13 +212,13 @@
        "4  nonexistent          93.994          -36.4       5191.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "customer = df[:100]\n",
+    "customer = df\n",
     "customer.head(5)"
    ]
   },
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -292,7 +292,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -318,7 +318,8 @@
     },
     "colab_type": "code",
     "id": "VTM9aGeQikOW",
-    "outputId": "5252b9ae-be9e-4273-a766-a30651da39cc"
+    "outputId": "5252b9ae-be9e-4273-a766-a30651da39cc",
+    "scrolled": false
    },
    "outputs": [
     {
@@ -326,127 +327,261 @@
      "output_type": "stream",
      "text": [
       "age\n",
-      "56    2\n",
-      "24    1\n",
-      "40    1\n",
-      "59    1\n",
-      "45    1\n",
-      "57    1\n",
-      "41    1\n",
-      "37    1\n",
-      "25    1\n",
-      "Name: age, dtype: int64\n",
+      "31    1947\n",
+      "32    1846\n",
+      "33    1833\n",
+      "36    1780\n",
+      "35    1759\n",
+      "      ... \n",
+      "89       2\n",
+      "91       2\n",
+      "87       1\n",
+      "94       1\n",
+      "95       1\n",
+      "Name: age, Length: 78, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "job\n",
-      "services       5\n",
-      "admin.         2\n",
-      "blue-collar    1\n",
-      "housemaid      1\n",
-      "technician     1\n",
+      "admin.           10422\n",
+      "blue-collar       9254\n",
+      "technician        6743\n",
+      "services          3969\n",
+      "management        2924\n",
+      "retired           1720\n",
+      "entrepreneur      1456\n",
+      "self-employed     1421\n",
+      "housemaid         1060\n",
+      "unemployed        1014\n",
+      "student            875\n",
+      "unknown            330\n",
       "Name: job, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "marital\n",
-      "married    8\n",
-      "single     2\n",
+      "married     24928\n",
+      "single      11568\n",
+      "divorced     4612\n",
+      "unknown        80\n",
       "Name: marital, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "education\n",
-      "high.school            4\n",
-      "professional.course    2\n",
-      "basic.6y               1\n",
-      "basic.4y               1\n",
-      "basic.9y               1\n",
-      "unknown                1\n",
+      "university.degree      12168\n",
+      "high.school             9515\n",
+      "basic.9y                6045\n",
+      "professional.course     5243\n",
+      "basic.4y                4176\n",
+      "basic.6y                2292\n",
+      "unknown                 1731\n",
+      "illiterate                18\n",
       "Name: education, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "default\n",
-      "no         7\n",
-      "unknown    3\n",
+      "no         32588\n",
+      "unknown     8597\n",
+      "yes            3\n",
       "Name: default, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "housing\n",
-      "no     7\n",
-      "yes    3\n",
+      "yes        21576\n",
+      "no         18622\n",
+      "unknown      990\n",
       "Name: housing, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "loan\n",
-      "no     9\n",
-      "yes    1\n",
+      "no         33950\n",
+      "yes         6248\n",
+      "unknown      990\n",
       "Name: loan, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "comm_type\n",
-      "telephone    10\n",
+      "cellular     26144\n",
+      "telephone    15044\n",
       "Name: comm_type, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "month\n",
-      "may    10\n",
+      "may    13769\n",
+      "jul     7174\n",
+      "aug     6178\n",
+      "jun     5318\n",
+      "nov     4101\n",
+      "apr     2632\n",
+      "oct      718\n",
+      "sep      570\n",
+      "mar      546\n",
+      "dec      182\n",
       "Name: month, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "day_of_week\n",
-      "mon    10\n",
+      "thu    8623\n",
+      "mon    8514\n",
+      "wed    8134\n",
+      "tue    8090\n",
+      "fri    7827\n",
       "Name: day_of_week, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "last_contact_duration\n",
-      "50     1\n",
-      "380    1\n",
-      "139    1\n",
-      "217    1\n",
-      "151    1\n",
-      "198    1\n",
-      "261    1\n",
-      "307    1\n",
-      "226    1\n",
-      "149    1\n",
-      "Name: last_contact_duration, dtype: int64\n",
+      "85      170\n",
+      "90      170\n",
+      "136     168\n",
+      "73      167\n",
+      "124     164\n",
+      "       ... \n",
+      "1108      1\n",
+      "980       1\n",
+      "4918      1\n",
+      "2453      1\n",
+      "2015      1\n",
+      "Name: last_contact_duration, Length: 1544, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "campaign_contact_count\n",
-      "1    10\n",
+      "1     17642\n",
+      "2     10570\n",
+      "3      5341\n",
+      "4      2651\n",
+      "5      1599\n",
+      "6       979\n",
+      "7       629\n",
+      "8       400\n",
+      "9       283\n",
+      "10      225\n",
+      "11      177\n",
+      "12      125\n",
+      "13       92\n",
+      "14       69\n",
+      "17       58\n",
+      "15       51\n",
+      "16       51\n",
+      "18       33\n",
+      "20       30\n",
+      "19       26\n",
+      "21       24\n",
+      "22       17\n",
+      "23       16\n",
+      "24       15\n",
+      "27       11\n",
+      "29       10\n",
+      "25        8\n",
+      "26        8\n",
+      "28        8\n",
+      "30        7\n",
+      "31        7\n",
+      "35        5\n",
+      "33        4\n",
+      "32        4\n",
+      "34        3\n",
+      "40        2\n",
+      "42        2\n",
+      "43        2\n",
+      "37        1\n",
+      "39        1\n",
+      "41        1\n",
+      "56        1\n",
       "Name: campaign_contact_count, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "poutcome\n",
-      "nonexistent    10\n",
+      "nonexistent    35563\n",
+      "failure         4252\n",
+      "success         1373\n",
       "Name: poutcome, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "cons.price.idx\n",
-      "93.994    10\n",
+      "93.994    7763\n",
+      "93.918    6685\n",
+      "92.893    5794\n",
+      "93.444    5175\n",
+      "94.465    4374\n",
+      "93.200    3616\n",
+      "93.075    2458\n",
+      "92.201     770\n",
+      "92.963     715\n",
+      "92.431     447\n",
+      "92.649     357\n",
+      "94.215     311\n",
+      "94.199     303\n",
+      "92.843     282\n",
+      "92.379     267\n",
+      "93.369     264\n",
+      "94.027     233\n",
+      "94.055     229\n",
+      "93.876     212\n",
+      "94.601     204\n",
+      "92.469     178\n",
+      "93.749     174\n",
+      "92.713     172\n",
+      "94.767     128\n",
+      "93.798      67\n",
+      "92.756      10\n",
       "Name: cons.price.idx, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "cons.conf.idx\n",
-      "-36.4    10\n",
+      "-36.4    7763\n",
+      "-42.7    6685\n",
+      "-46.2    5794\n",
+      "-36.1    5175\n",
+      "-41.8    4374\n",
+      "-42.0    3616\n",
+      "-47.1    2458\n",
+      "-31.4     770\n",
+      "-40.8     715\n",
+      "-26.9     447\n",
+      "-30.1     357\n",
+      "-40.3     311\n",
+      "-37.5     303\n",
+      "-50.0     282\n",
+      "-29.8     267\n",
+      "-34.8     264\n",
+      "-38.3     233\n",
+      "-39.8     229\n",
+      "-40.0     212\n",
+      "-49.5     204\n",
+      "-33.6     178\n",
+      "-34.6     174\n",
+      "-33.0     172\n",
+      "-50.8     128\n",
+      "-40.4      67\n",
+      "-45.9      10\n",
       "Name: cons.conf.idx, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
       "\n",
       "nr.employed\n",
-      "5191.0    10\n",
+      "5228.1    16234\n",
+      "5099.1     8534\n",
+      "5191.0     7763\n",
+      "5195.8     3683\n",
+      "5076.2     1663\n",
+      "5017.5     1071\n",
+      "4991.6      773\n",
+      "5008.7      650\n",
+      "4963.6      635\n",
+      "5023.5      172\n",
+      "5176.3       10\n",
       "Name: nr.employed, dtype: int64\n",
       "\n",
       "--------------------------------------\n",
@@ -465,12 +600,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Columns(numeric value) with cateorical values are stored in list 'ind'. 'c_data' has names of column with categorical data"
+    "## 'c_data' has names of column with categorical data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -492,7 +627,7 @@
        " 'poutcome']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -526,13 +661,40 @@
     "id": "ftR7ViXFikO0",
     "outputId": "817aff72-035d-4e21-dfdf-558b6b0b747a"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'age': 0,\n",
+       " 'job': 1,\n",
+       " 'marital': 2,\n",
+       " 'education': 3,\n",
+       " 'default': 4,\n",
+       " 'housing': 5,\n",
+       " 'loan': 6,\n",
+       " 'comm_type': 7,\n",
+       " 'month': 8,\n",
+       " 'day_of_week': 9,\n",
+       " 'last_contact_duration': 10,\n",
+       " 'campaign_contact_count': 11,\n",
+       " 'poutcome': 12,\n",
+       " 'cons.price.idx': 13,\n",
+       " 'cons.conf.idx': 14,\n",
+       " 'nr.employed': 15}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "d={}\n",
     "k=0\n",
     "for i in customer.columns:\n",
     "    d[i]=k\n",
-    "    k=k+1"
+    "    k=k+1\n",
+    "d"
    ]
   },
   {
@@ -544,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -554,26 +716,14 @@
     "id": "mgziYoxrikO6",
     "outputId": "fa4a15a3-2ffc-4d97-fb6f-c1bb49e15313"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/saujanya/anaconda3/lib/python3.7/site-packages/pandas/core/frame.py:4133: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  errors=errors,\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "customer.rename(columns=d,inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -739,7 +889,7 @@
        "4  mon  307   1  nonexistent  93.994 -36.4  5191.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2346,30 +2496,6 @@
     "for i in range(len(cd)):\n",
     "    cd[i]=pd.DataFrame(cd[i],columns=column)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/saujanya/Desktop/axis_bank_internship/datasets/customer_clustering\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "!pwd"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
